--- a/about.css
+++ b/about.css
@@ -1,28 +1,29 @@
 /*about.html section*/
 
+a[href="about.html"] {
+  border-bottom: 0.02rem solid #ccc;
+}
+
 .about {
   background-image: none;
   background-color: slategray;
   font-family: "IBM Plex Sans", sans-serif;
 }
-
-hr{
-  margin: 0 auto;
-  border: 0.001rem solid #ccc;
-  max-width: 2.4rem;
-  transform: translateX(-8.6rem);
-}
-
 .trivia{
   text-align: center;
+}
+
+li{
+  margin: 0.5rem;
 }
 
 h2{
   padding-top: 5rem;
   font-size: 3.2rem;
-  text-align: center;
+  padding-left: 28rem;
 }
 
 .about-blurb{
-  padding: 4rem 38rem 0rem 38rem;
+  font-size: 1.2rem;
+  padding: 4rem 28rem 0rem 28rem;
 }
