--- a/contact.css
+++ b/contact.css
@@ -1,5 +1,9 @@
 /* Contact.html Section */
 
+a[href="contact.html"] {
+  border-bottom: 0.02rem solid #ccc;
+}
+
 .contact-blurb {
   padding-top: 7rem;
   padding-left: 3rem;
@@ -64,7 +68,9 @@ input[type="email"] {
   /* Gray border */
   box-sizing: border-box;
   /* Make sure that padding and width stays in place */
-  padding: 0.5rem 15rem;
+  padding-left: 0.4rem;
+  width: 30.176rem;
+  height: 2.2rem;
   /* Add a top margin */
   margin: 0 auto;
   /* Bottom margin */
@@ -93,7 +99,11 @@ textarea {
   /* Gray border */
   box-sizing: border-box;
   /* Make sure that padding and width stays in place */
-  padding: 1.2rem 11rem;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
+  padding-top: 0.3rem;
+  width: 35rem;
+  height: 9rem;
   /* Add a top margin */
   margin: 0 auto;
   /* Bottom margin */
@@ -116,7 +126,7 @@ input[type="submit"]:hover {
   background-color: #45a049;
 }
 
-.submit{
+.submit {
   padding-top: 1rem;
   padding-left: 12rem;
 }
