--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -102,14 +102,19 @@ textarea {
   padding-left: 0.2rem;
   padding-right: 0.2rem;
   padding-top: 0.3rem;
-  width: 35rem;
+  width: 33.5rem;
   height: 9rem;
   /* Add a top margin */
   margin: 0 auto;
   /* Bottom margin */
   resize: vertical;
   /* Allow the user to vertically resize the textarea (not horizontally) */
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: inherit;
+}
+
+input, textarea{
+
+  white-space:pre-wrap;
 }
 
 /* Style the submit button with a specific background color etc */
