--- a/CSS/MyStyle.css
+++ b/CSS/MyStyle.css
@@ -5,6 +5,10 @@
     --fontw: white;
 }
 
+.no-js {
+    background-image: url('/bgimages/2.png');
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 html::-webkit-scrollbar {
     display: none;
@@ -103,12 +107,12 @@ html {
     padding-right: 1.04rem;
 }
 
-.navbar li > a {
+.navbar li>a {
     padding: 0.52rem 0.52rem;
 }
 
-.nav > li > a:hover,
-.nav > li > a:focus {
+.nav>li>a:hover,
+.nav>li>a:focus {
     text-decoration: none;
 }
 
@@ -139,8 +143,8 @@ html {
     padding-left: 1.04rem;
 }
 
-.socials > li > a:hover,
-.socials > li > a:focus {
+.socials>li>a:hover,
+.socials>li>a:focus {
     text-decoration: none;
 }
 
@@ -182,14 +186,14 @@ body {
     transform: translate(-20rem, 5rem);
 }
 
-#bgcredit > a {
+#bgcredit>a {
     color: var(--fontw);
     text-decoration: none;
     text-shadow: -0.04rem 0.04rem 0.5rem #000;
 }
 
-#bgcredit > a:hover,
-#bgcredit > a:focus {
+#bgcredit>a:hover,
+#bgcredit>a:focus {
     color: lightgray;
 }
 
