--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -11,7 +11,7 @@ a[href="contact.html"] {
 }
 
 .contact-blurb {
-    margin-top: 7rem;
+    margin-top: 10rem;
     margin-left: 3rem;
     margin-right: 3rem;
     font-family: "IBM Plex Sans", sans-serif;
@@ -22,7 +22,15 @@ a[href="contact.html"] {
 }
 
 h2 {
+    margin-top: 0rem;
+    margin-bottom: 0rem;
     font-size: 3rem
+}
+
+
+p {
+    margin-top: 0rem;
+    margin-bottom: 0rem;
 }
 
 
@@ -31,10 +39,10 @@ h2 {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    
+
 }
 
-#contact-form{
+#contact-form {
     display: inline-block;
     text-align: left;
 }
