--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,326 +1,157 @@
-/*General Section*/
 :root {
-    font-size: 19.2px;
-    --fontb: black;
-    --fontw: white;
-}
-
-.no-js {
-    background-image: url('/bgimages/2.png');
-} 
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-html::-webkit-scrollbar {
-    display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-html {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-}
-
-::selection {
-    color: none;
-    background: none;
-}
-
-/* For Mozilla Firefox */
-::-moz-selection {
-    color: none;
-    background: none;
-}
-
-.navbar-container {
-    position: relative;
-    display: flex;
-    padding-top: 1rem;
-    max-height: 3rem;
-    transition: top 0.3s ease-in-out;
-}
-
-.navbar-container.hide {
-    top: -100px;
-}
-
-.navbar-container.show {
-    top: 0px;
-}
-
-.header {
-    /* some padding */
-    text-align: left;
-    color: var(--fontw);
-    font-family: "Bungee Shade", cursive;
-    font-size: 1.09559rem;
-    padding-left: 1rem;
-    padding-right: 0rem;
-    padding-top: 0rem;
-    padding-bottom: 0.26rem;
-    margin: 0 0 0 0;
-    line-height: 15%;
-}
-
-.header a {
-    color: var(--fontw);
-    text-decoration: none;
-}
-
-
-
-/* Style the top navigation bar */
-.navbar {
-    position: relative;
-    overflow: hidden;
-    /* Dark background color */
-    list-style: none;
-    padding-top: 1.04rem;
-    padding-right: 6.908rem;
-    padding-left: 3.608rem;
-    font-family: "IBM Plex Sans", sans-serif;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-    position: relative;
-    /* Change the display to block, for responsive reasons (see below) */
-    color: var(--fontw);
-    /* White text color */
-    text-align: center;
-    /* Center the text */
-    padding-left: 0.52rem;
-    padding-right: 0.52rem;
-    /* Add some padding */
-    text-decoration: none;
-    /* Remove underline */
-    font-size: 1.04rem;
-}
-
-.navbar li {
-    position: relative;
-    /* Make sure that the links stay side-by-side */
-    list-style-type: none;
-    padding-left: 1.04rem;
-    padding-right: 1.04rem;
-}
-
-.navbar li>a {
-    padding: 0.52rem 0.52rem;
-}
-
-.nav>li>a:hover,
-.nav>li>a:focus {
-    text-decoration: none;
-}
-
-.socials {
-    position: relative;
-    overflow: hidden;
-    /* Hide overflow */
-    list-style: none;
-    padding-top: 1.016rem;
-    padding-left: 18.24rem;
-}
-
-.socials a {
-    position: relative;
-    text-decoration: none;
-    padding-right: 1.04rem;
-    font-size: 1.6rem;
-    color: var(--fontw);
-}
-
-#hidetext {
-    font-size: 0 !important;
-}
-
-.socials li {
-    list-style-type: none;
-    margin: 0 auto;
-    padding-left: 1.04rem;
-}
-
-.socials>li>a:hover,
-.socials>li>a:focus {
-    text-decoration: none;
-}
-
-/*nen.studio.html section*/
-
-.main-container {
-    position: relative;
-    display: flex;
-}
-
-.text-overlay {
-    padding: 23rem 15.625rem 0rem 26.042rem;
-    font-family: "IBM Plex Sans", sans-serif;
-    font-weight: bold;
-    text-shadow: -0.2rem 0.2rem 0rem #000;
-}
-
-#bigger-text {
-    font-size: 3.65rem;
-    text-align: center;
-}
-
-#smaller-text {
-    font-size: 1.5625rem;
-    text-align: center;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 body {
-    color: var(--fontw);
-    background-color: var(--fontb);
-    /*responsive design stuff for background image*/
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+  background-color: black;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+  cursor: default;
 }
 
-#bgcredit {
-    transform: translate(-20rem, 5rem);
+.container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr;
+  grid-template-areas:
+    "left right right ";
+  width: 100vw;
+  height: 100vh;
 }
 
-#bgcredit>a {
-    color: var(--fontw);
-    text-decoration: none;
-    text-shadow: -0.04rem 0.04rem 0.5rem #000;
+.sidebar {
+  background: #61cc9e;
+  grid-area: left;
+  position: relative;
+  overflow: hidden;
 }
 
-#bgcredit>a:hover,
-#bgcredit>a:focus {
-    color: lightgray;
+.sidebar::before {
+  content: "";
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  background-image: var(--bgimage);
+  background-size: cover;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  transform: translateX(-15em) scale(1.03);
 }
 
-/*MEDIA QUERIES*/
+.sidebar-inside {
+  position: relative;
+}
 
+.main-content {
+  background: #ffffff;
+  grid-area: right;
 
+  /* this is the subgrid holding all the stuff in the section marked button */
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 2em;
+  padding: 4em;
+}
 
-/* ----------- Non-Retina Screens ----------- */
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
+.footer {
+  background: #54a3ff;
+  grid-area: bottom;
+}
 
-    :root {
-        font-size: 14.4px;
-    }
+/* BUTTON */
+/* manages all the content around the buttons nested within main content */
+button {
+  cursor: pointer;
+  text-decoration: none;
+  box-shadow: 0 0 0.5em 0 black;
+}
+
+#comics {
+  background: #000;
+}
+
+#dev {
+  background: #000;
+}
+
+#editing {
+  background: #000;
+}
+
+/*/////////////////////////////////////////////////////////////////// */
+
+/* Profile Image Management */
+
+h2 {
+  font-family: 'Bungee Outline', cursive;
+  font-size: 5em;
+  margin: 0;
+  color: whitesmoke;
+  overflow: hidden;
+  line-height: 1.4em;
 
 }
 
-/* ----------- Retina Screens ----------- */
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
-
-    :root {
-        font-size: 14.4px;
-    }
-
+.flip_H {
+  -moz-transform: scale(-1, 1);
+  -webkit-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
+  transform: scale(-1, 1);
+  display: inline-block;
 }
 
-/* ----------- iPad 3, 4 and Pro 9.7" ----------- */
+/* If you want the content centered horizontally and vertically */
+.centered {
+  display: grid;
+  place-items: center;
+  transform: translateY(12em);
+}
 
-/* Portrait and Landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {}
+/* Style the image inside the centered container, if needed */
+.centered img {
+  width: 26vh;
+  border-radius: 50%;
+  margin-bottom: 2em;
+}
 
-/* Portrait */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {}
+.socials {
+  align-items: center;
+  list-style-type: none;
+}
 
-/* Landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {}
+.socials a {
+  text-decoration: none;
+  letter-spacing: 0.5em;
+  font-size: 2.3em;
+  color: white;
+}
 
-/* ----------- iPad Pro 10.5" ----------- */
+p {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 1.4em;
+  color: white;
+}
 
-/* Portrait and Landscape */
-@media only screen and (min-device-width: 834px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 2) {}
+/*/////////////////////////////////////////////////////////////////// */
 
-/* Portrait */
-/* Declare the same value for min- and max-width to avoid colliding with desktops */
-/* Source: https://medium.com/connect-the-dots/css-media-queries-for-ipad-pro-8cad10e17106*/
-@media only screen and (min-device-width: 834px) and (max-device-width: 834px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {}
+/* Media Queries for responsiveness*/
 
-/* Landscape */
-/* Declare the same value for min- and max-width to avoid colliding with desktops */
-/* Source: https://medium.com/connect-the-dots/css-media-queries-for-ipad-pro-8cad10e17106*/
-@media only screen and (min-device-width: 1112px) and (max-device-width: 1112px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {}
+@media all and (max-width: 700px) {
+  .sidebar,
+  .main-content {
+    grid-column: 1 / span 2;
+  }
 
-/* ----------- iPad Pro 12.9" ----------- */
-
-/* Portrait and Landscape */
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) {}
-
-/* Portrait */
-/* Declare the same value for min- and max-width to avoid colliding with desktops */
-/* Source: https://medium.com/connect-the-dots/css-media-queries-for-ipad-pro-8cad10e17106*/
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {}
-
-/* Landscape */
-/* Declare the same value for min- and max-width to avoid colliding with desktops */
-/* Source: https://medium.com/connect-the-dots/css-media-queries-for-ipad-pro-8cad10e17106*/
-@media only screen and (min-device-width: 1366px) and (max-device-width: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {}
-
-/* ----------- iPhone 6+, 7+ and 8+ ----------- */
-
-/* Portrait and Landscape */
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {}
-
-/* Portrait */
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {}
-
-/* Landscape */
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {}
-
-/* ----------- iPhone X ----------- */
-
-/* Portrait and Landscape */
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {}
-
-/* Portrait */
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {}
-
-/* Landscape */
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {}
-
-/* ----------- Galaxy S4, S5 and Note 3 ----------- */
-
-/* Portrait and Landscape */
-@media screen and (device-width: 320px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) {}
-
-/* Portrait */
-@media screen and (device-width: 320px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait) {}
-
-/* Landscape */
-@media screen and (device-width: 320px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape) {}
-
-/* ----------- Galaxy S6 ----------- */
-
-/* Portrait and Landscape */
-@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 4) {}
-
-/* Portrait */
-@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 4) and (orientation: portrait) {}
-
-/* Landscape */
-@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 4) and (orientation: landscape) {}
-
-/* ----------- Google Pixel ----------- */
-
-/* Portrait and Landscape */
-@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) {}
-
-/* Portrait */
-@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait) {}
-
-/* Landscape */
-@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape) {}
-
-/* ----------- Google Pixel XL ----------- */
-
-/* Portrait and Landscape */
-@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 4) {}
-
-/* Portrait */
-@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 4) and (orientation: portrait) {}
-
-/* Landscape */
-@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 4) and (orientation: landscape) {}
+}
